--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -9,7 +9,7 @@
     tools:context=".classes.activities.RecipeOverviewActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/rOverviewToolbar"
+        android:id="@+id/rToolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,13 +18,14 @@
         android:elevation="2dp"
         android:background="@color/ToolBar"
         >
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:src="@mipmap/more_secondary"
+            android:layout_marginVertical="8dp"
             android:background="@color/ToolBar"
-            android:layout_marginVertical="8dp"/>
+            android:src="@mipmap/arrow_left_secondary" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -59,40 +60,43 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <HorizontalScrollView
-        android:id="@+id/horiScrollView"
+    <LinearLayout
+        android:id="@+id/rIngredientHeader"
+        android:layout_below="@id/rToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rOverviewToolbar">
-        <LinearLayout
-            android:layout_width="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/rIngredientTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:padding="4dp"
+            android:textColor="@color/primaryText"
+            android:textSize="40sp"
+            android:text="Ingredients"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/Background"
+            android:src="@mipmap/more_secondary"
+            android:onClick="test1"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/Background"
+            android:src="@mipmap/add_dark"
+            android:onClick="test2"/>
+    </LinearLayout>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/Secondary"
-                android:text="Default"
-                android:textColor="@color/primaryText" />
-        </LinearLayout>
-    </HorizontalScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rOverviewRecyclerView"
+        android:id="@+id/rIngredientRecyclerView"
+        android:layout_marginTop="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/horiScrollView"
+        android:layout_below="@id/rIngredientHeader"
         android:scrollbars="vertical"
         />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:src="@mipmap/add_dark"
-        android:onClick="addRecipe"
-        android:layout_margin="20dp"/>
 
 </RelativeLayout>
